Fix letter spacing in navbar

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -112,7 +112,7 @@ body
   &__item
     position: relative
     font-size: 1.4rem
-    letter-spacing: -4%
+    letter-spacing: -0.04em
     line-height: 1
 
     &::after
@@ -526,7 +526,7 @@ body
 
   &__link
     font-size: 1.4rem
-    letter-spacing: -4%
+    letter-spacing: -0.04em
     line-height: 1
     transition: opacity 150ms
 
